Fixed padding that made the header look too high

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -100,6 +100,7 @@ header {
 .notifications-toggle {
   cursor: pointer;
   line-height: 47px;
+  padding-bottom: 0px !important;
   .notifications-img {
     width: 20px;
   }
